--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="search-engine">
+  <h2>Book a pet for a day or more</h2>
+  <h6>Where?</h6>
+  <h6>From</h6>
+  <h6>To</h6>
+  <%= link_to "Search a pet !", "#",class:"btn btn-dark" %>
+</div>
