--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,7 +6,7 @@
   height:750px;
   width:100%;
   margin:0;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://natgeo.imgix.net/shows/thumbnails/ngw-survivethewild.jpg?auto=compress,format&w=1920&h=960&fit=crop)
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/ambroise/image/upload/v1582037765/xyydcpucblhzoyvxrfpl.jpg)
 }
 
 .search-engine{
