--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,16 +25,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <%= link_to "Add a pet", "#", class: "nav-link" %>
+            <%= link_to "Add a pet", new_pet_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Help", "#", class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Inscription", "#", class: "nav-link" %>
+            <%= link_to "Inscription", new_user_registration_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Connexion", "#", class: "nav-link" %>
+            <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
