I fixed the navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,11 +13,15 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: white;
+  &.white {
+    color: white;
+  }
+  &.black {
+    color: black;
+  }
   &:hover {
     margin-bottom: -3px;
     color:white;
     border-bottom:3px solid white;
   }
 }
-
