--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,16 +10,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <%= link_to "Add a pet", "#", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+        <%= link_to "Add a pet",new_pet_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
       </li>
       <li class="nav-item">
         <%= link_to "Help", "#", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Inscription", "#", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+        <%= link_to "Inscription", new_user_registration_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Connexion", "#", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+        <%= link_to "Connexion",new_user_session_path , class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
       </li>
       <li class="nav-item dropdown">
         <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
