I have fixed a path to go back to root, and changed the home form

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "https://lh3.googleusercontent.com/proxy/jchx5_Bj7lVnEWhJfb4YBRl_WX2EXbMstX5KUojgi5qQsG1-v1vF2ybxTXDxlYG-5Yu5xbGUG7WfcoTr7eDpYHfdilivY0y5hM62rL-LC5-Jgr8KalWcY2xD2i9laO983Xvl" %>
+  <%= link_to root_path, class: "navbar-brand" do %>
+    <%= image_tag "https://res.cloudinary.com/ambroise/image/upload/v1582046801/cc13b814a6f46ed45371fbb37b3b78b1_obfdqo.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
