Added the container in application.html

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,8 +1,9 @@
-<h1><%= @pet.name %></h1>
+<div class="container">
+  <h1><%= @pet.name %></h1>
 
-
-<ul>
-  <li><%= @pet.race %></li>
-  <li><%= @pet.age %></li>
-  <li><%= @pet.description %></li>
-</ul>
+  <ul>
+    <li><%= @pet.race %></li>
+    <li><%= @pet.age %></li>
+    <li><%= @pet.description %></li>
+  </ul>
+</div>
