--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-img">
+<div class="bg-img-home">
   <%= render 'shared/navbar' %>
   <div class="search-engine">
     <h2>Book a pet for a day or more</h2>
