--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,6 @@
 @import "pages/index";
 
 @import "cards";
-
+@import "components/form-clickable-tag";
+@import "components/form-pets-icons-specie";
+@import "components/form-font-styles"
