--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -10,6 +10,7 @@
   <%= t.input :race_cat, wrapper_html: {id:"input-chat", class: "d-none"}, collection: Race.where(specie: Specie.find_by_name('chat')) %>
   <%= t.input :race_dog, wrapper_html: {id:"input-chien", class: "d-none"}, collection: Race.where(specie: Specie.find_by_name('chien')) %>
   <%= t.input :age %>
+  <%= t.input :photo, as: :file %>
   <%= t.input :description %>
   <%= t.input :address %>
     <div class="row justify-content-center mt-5">
@@ -47,7 +48,7 @@
   <div class="d-flex justify-content-center m-3">
     <%= t.button :submit, class: "btn btn-secondary text-center p-3" %>
   </div>
-  <%= f.input :photo, as: :file %>
+
   <% end %>
 </div>
 
