--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,33 +1,39 @@
-<div class ="container">
-  <h1>All pets</h1>
-
-  <% @pets.each do |pet| %>
-  <div class="cards">
-    <%= link_to pet_path(pet) do %>
-    <div class="card-pet">
-      <!-- enlever quand on met cloudinary dans form -->
-      <!-- <#%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %> -->
-      <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg">
-      <div class= "card-pet-info">
-        <div>
-          <h2><%=  pet.name %></h2>
-          <p><%= pet.race.name %></p>
-        </div>
-        <div>
-        <p> <%  pet.tag_list.each do |tag| %>
-          <%= tag %>
-          <% end %></p>
-        </div>
+<div class ="content">
+  <div class="row">
+    <div class="col-5">
+      <div class="cards">
+        <% @pets.each do |pet| %>
+          <%= link_to pet_path(pet) do %>
+            <div class="card-pet">
+            <!-- enlever quand on met cloudinary dans form -->
+            <!-- <#%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %> -->
+              <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg">
+              <div class= "card-pet-info">
+                <div>
+                  <h2><%=  pet.name %></h2>
+                  <p><%= pet.race.name %></p>
+                </div>
+                <div>
+                  <p> <%  pet.tag_list.each do |tag| %>
+                    <%= tag %>
+                    <% end %></p>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        <%end %>
       </div>
     </div>
-  <% end %>
+    <div class="col-7">
+      <div
+        id="map"
+        style="width: 100%;
+        height: 100vh;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+      ></div>
+    </div>
+
   </div>
-  <%end %>
 </div>
-  <div
-    id="map"
-    style="width: 100%;
-    height: 600px;"
-    data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-  ></div>
+
