--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,6 @@
     <h6>Where?</h6>
     <h6>From</h6>
     <h6>To</h6>
-    <%= link_to "Search a pet !", "#",class:"btn btn-dark" %>
+    <%= link_to "Search a pet !", pets_path,class:"btn btn-dark" %>
   </div>
 </div>
