--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,25 +9,30 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to "Add a pet",new_pet_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Help", "#", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Inscription", new_user_registration_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Connexion",new_user_session_path , class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
-      </li>
-      <li class="nav-item dropdown">
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Action", "#", class: "dropdown-item" %>
-          <%= link_to "Another action", "#", class: "dropdown-item" %>
-        </div>
-      </li>
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Add a pet",new_pet_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "My Bookings",new_pet_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Help", "#", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+        </li>
+        <li class="nav-item dropdown">
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", method: :delete %>
+          </div>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Inscription", new_user_registration_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Connexion",new_user_session_path , class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </div>
