--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,9 +1,18 @@
-<div class="container">
-  <h1><%= @pet.name %></h1>
+<div class = "m-5 p-5">
+  <div>
+    <div>
+      <h1><%= @pet.name %></h1>
+      <%= cl_image_tag @pet.photo.key, height: 700, width: 700, crop: :fill %>
 
-  <ul>
-    <li><%= @pet.race %></li>
-    <li><%= @pet.age %></li>
-    <li><%= @pet.description %></li>
-  </ul>
+        <div>
+          <h3> Hello, I am a <%= @pet.race.name %>, I am <%= @pet.age %> years old and I am <%= @pet.description %></h3>
+        </div>
+
+      <p> <%=  @pet.name %> is <%  @pet.tag_list.each do |tag| %>
+        <div>
+          <%= tag %>
+        </div>
+      <% end %></p>
+    </div>
+  </div>
 </div>
