--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
           <%= link_to "My Bookings",new_pet_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Help", "#", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+          <%= link_to "Help", "https://www.airbnb.fr/", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
