--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,3 +1,6 @@
 <%= render 'shared/navbar' %>
-<h1> Add a pet </h1>
-<%= render 'form', pet: @pet %>
+<div class="container">
+  <h1> Add a pet </h1>
+  <%= render 'form', pet: @pet %>
+</div>
+
