--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,18 +1,16 @@
-<div class = "m-5 p-5">
+<div class="d-flex justify-content-between">
   <div>
-    <div>
-      <h1><%= @pet.name %></h1>
-      <%= cl_image_tag @pet.photo.key, height: 700, width: 700, crop: :fill %>
+    <%= cl_image_tag @pet.photo.key, height: 700, width: 700, crop: :fill %>
+  </div >
+  <div class="container">
+    <h1><%= @pet.name %></h1>
+    <h5><%= @pet.race.name %></h5>
+    <h6>Age : <%= @pet.age %></h6>
+    <h6> Description : <%= @pet.description %></h6>
 
-        <div>
-          <h3> Hello, I am a <%= @pet.race.name %>, I am <%= @pet.age %> years old and I am <%= @pet.description %></h3>
-        </div>
-
-      <p> <%=  @pet.name %> is <%  @pet.tag_list.each do |tag| %>
-        <div>
-          <%= tag %>
-        </div>
-      <% end %></p>
-    </div>
+    <p> <%=  @pet.name %> is <%  @pet.tag_list.each do |tag| %>
+              <%= tag %>
+    <% end %></p>
   </div>
 </div>
+
