--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,11 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: transparent;
-
+  &.transparent{
+    background: transparent;
+  }
+  &.black{
+    background-color: gray;
+  }
 }
 
 .navbar-lewagon .navbar-collapse {
