--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,3 +1,7 @@
 <%= render 'shared/navbar' %>
-<h1> Add a pet </h1>
-<%= render 'form', pet: @pet %>
+<div class="container">
+  <div class="card m-3 p-2">
+    <h1 class="text-center"> Let's add a pet ! </h1>
+    <%= render 'form', pet: @pet %>
+  </div>
+</div>
