--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -16,7 +16,7 @@
     <div class="row justify-content-center mt-5 mb-2">
       <div class="col-sm-8 text-center">
         <h3>Describe your pet</h3>
-        <div class="d-flex flex-wrap justify-content-center pt-4">
+        <div id = "tags" class="d-flex flex-wrap justify-content-center pt-4">
           <div class="clickable">
             <i class="fas fa-heart"></i>
             <small>Calin</small>
