--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -43,8 +43,8 @@
             <div class="card-pet">
             <!-- enlever quand on met cloudinary dans form -->
             <!-- <#%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %> -->
-            <% if pet.photo.attached? %>
-               <%= cl_image_tag pet.photo.key, height: 300, width: 400, crop: :fill %>
+            <% if pet.photos.attached? %>
+               <%= cl_image_tag pet.photos.first.key, height: 300, width: 400, crop: :fill %>
             <% else %>
               <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg">
             <% end %>
