--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,6 @@
 @import "cards";
 @import "components/form-clickable-tag";
 @import "components/form-pets-icons-specie";
-@import "components/form-font-styles"
+@import "components/form-font-styles";
+@import "components/container";
+@import "components/images"
