--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,5 @@
 @import "components/form-pets-icons-specie";
 @import "components/form-font-styles";
 @import "components/container";
-@import "components/images"
+@import "components/images";
+@import "components/animation"
