--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
           <%= link_to "Add a pet",new_pet_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
         </li>
         <li class="nav-item">
-          <%= link_to "My Bookings",new_pet_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
+          <%= link_to "My Bookings",bookings_path, class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
         </li>
         <li class="nav-item">
           <%= link_to "Help", "https://www.airbnb.fr/", class: "nav-link #{params[:action] == 'home' ? 'white' : 'black'}" %>
