added some css to all users page

--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -6,5 +6,6 @@
   -o-background-size: cover;
   background-size: cover;
   height:100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://media.gettyimages.com/videos/cat-grooming-video-id845399712?s=640x640)
+  // background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://media.gettyimages.com/videos/cat-grooming-video-id845399712?s=640x640)
+  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://res.cloudinary.com/ambroise/image/upload/v1582192839/qwgfupe5nszuj8rziifj.jpg)
 }
