--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,7 +4,8 @@
     background: transparent;
   }
   &.black{
-    background-color: gray;
+    background-color: white;
+    opacity: 0.7;
   }
 }
 
