--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -13,7 +13,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
+    <div class = "btn button"><%= f.button :submit, "Resend confirmation instructions" %></div>
+
   </div>
 <% end %>
 
