--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,5 @@
 @import "components/form-font-styles";
 @import "components/container";
 @import "components/images";
-@import "components/animation"
+@import "components/button";
+// @import "components/animation"
