--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,7 +7,7 @@
   -o-background-size: cover;
   background-size: cover;
   height:100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/ambroise/image/upload/v1582037765/xyydcpucblhzoyvxrfpl.jpg)
+  background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://res.cloudinary.com/ambroise/image/upload/v1582191823/aagwg7hopvtgs7ivwovc.jpg)
 }
 
 .search-engine{
@@ -19,6 +19,8 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  opacity: 0.7;
+  border: 1px solid grey;
 }
 
 .search-engine h2 {
