--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,15 +1,15 @@
 .container_log {
   padding: 15px;
-  background-color: #F9F5FF;
-  width: 50%;
+  background-color: white;
+  width: 30%;
   position: absolute;
   display:inline-block;
-  border: 1px solid black;
+  border: 1px solid grey;
   border-radius: 5px;
   box-shadow:  0.5px 0.5px black;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0.9;
+  opacity: 0.8;
 }
 
