--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -13,3 +13,14 @@
   opacity: 0.8;
 }
 
+.container_add_pet {
+  width: 50%;
+  position: absolute;
+  display:inline-block;
+  border-radius: 5px;
+  box-shadow:  0.01px 0.01px white;
+  left: 50%;
+  top: 100%;
+  transform: translate(-50%, -50%);
+  opacity: 0.9;
+}
