--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,7 +1,9 @@
-<%= render 'shared/navbar' %>
-<div class="container">
-  <div class="card m-3 p-2">
-    <h1 class="text-center"> Let's add a pet ! </h1>
-    <%= render 'form', pet: @pet %>
+<div class= "image_add_a_pet">
+  <%= render 'shared/navbar' %>
+  <div class="container_add_pet">
+    <div class="card m-3 p-2">
+      <h1 class="text-center"> Let's add a pet ! </h1>
+      <%= render 'form', pet: @pet %>
+    </div>
   </div>
 </div>
