--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,6 +1,6 @@
 <div class ="content">
   <div class="row">
-    <div class="col-5">
+    <div class="col-6">
 
     <div class="row justify-content-center mt-5">
       <div class="col-sm-8 text-center">
@@ -40,31 +40,12 @@
       <div class="cards">
         <% @pets.each do |pet| %>
           <%= link_to pet_path(pet) do %>
-            <div class="card-pet">
-            <!-- enlever quand on met cloudinary dans form -->
-            <!-- <#%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %> -->
-            <% if pet.photos.attached? %>
-               <%= cl_image_tag pet.photos.first.key, height: 300, width: 400, crop: :fill %>
-            <% else %>
-              <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg">
-            <% end %>
-              <div class= "card-pet-info">
-                <div>
-                  <h2><%=  pet.name %></h2>
-                  <p><%= pet.race.name %></p>
-                </div>
-                <div>
-                  <p> <%  pet.tag_list.each do |tag| %>
-                    <%= tag %>
-                    <% end %></p>
-                </div>
-              </div>
-            </div>
+           <%= render partial: "shared/card", locals:{pet: pet} %>
           <% end %>
         <%end %>
       </div>
     </div>
-    <div class="col-7">
+    <div class="col-6">
       <div
         id="map"
         style="width: 100%;
