add a bit of style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,9 @@
 @import "components/index";
 @import "pages/index";
 
+
+
+// TODO REMOVE THIS LINES
 @import "cards";
 @import "components/form-clickable-tag";
 @import "components/form-pets-icons-specie";
