--- a/app/assets/stylesheets/components/_banners.scss
+++ b/app/assets/stylesheets/components/_banners.scss
@@ -19,7 +19,7 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   opacity: 0.7;
-  border: 1px solid grey;
+  border: 1px solid gray;
 }
 
 .search-engine h2 {
