--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,26 +1,27 @@
 .container_log {
   padding: 15px;
   background-color: white;
-  width: 30%;
+  width: 600px;
   position: absolute;
   display:inline-block;
-  border: 1px solid grey;
+  border: 1px solid gray;
   border-radius: 5px;
   box-shadow:  0.5px 0.5px black;
   left: 50%;
-  top: 50%;
+  top: 400px;
   transform: translate(-50%, -50%);
   opacity: 0.8;
 }
 
 .container_add_pet {
-  width: 50%;
+  padding: 15px;
   position: absolute;
-  display:inline-block;
+  width: 700px;
+  overflow: hidden;
   border-radius: 5px;
   box-shadow:  0.01px 0.01px white;
   left: 50%;
-  top: 100%;
+  top: 800px;
   transform: translate(-50%, -50%);
   opacity: 0.9;
 }
