added front in home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,4 +22,5 @@
 @import "components/container";
 @import "components/images";
 @import "components/button";
-// @import "components/animation"
+@import "components/icons";
+@import "components/animation"
