--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,4 +7,8 @@
     <h6>To</h6>
     <%= link_to "Search a pet !", pets_path,class:"btn btn-dark" %>
   </div>
+  <div id = "road">
+    <i class="fas fa-cat fa-flip-horizontal icon-cat-home"></i>
+    <i class="fas fa-dog icon-dog-home"></i>
+  </div>
 </div>
