--- a/app/assets/stylesheets/components/_animation.scss
+++ b/app/assets/stylesheets/components/_animation.scss
@@ -1,30 +1,6 @@
 #road {
-  border-bottom:7px dashed black;
-
-}
-
-#runner {
-  background: url("https://image.shutterstock.com/image-vector/run-cycle-animation-sequence-frames-600w-1515395465.jpg");
-  width: 100%;
-  height: 100px;
-  animation:walk 1s steps(12) infinite,
-    forward 5s linear infinite;
-}
-
-@keyframes walk {
-  0%{
-    background-position: 0px;
-  }
-  100%{
-    background-position: 3000px;
-  }
-}
-
-@keyframes forward {
-  0%{
-    transform:translateX(-100px);
-  }
-  100%{
-    transform:transformX(1200px);
-  }
+  border-bottom:7px dashed white;
+  z-index: 1;
+  position: relative;
+  top: 650px;
 }
