--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -76,7 +76,24 @@
           </div>
         </div>
       </div>
-      <%= render 'shared/flatpickr_form' %>
+      <div class="mt-5"> <%= render 'shared/flatpickr_form' %></div>
+    </div>
+  </div>
+  <div class="mt-3 d-flex justify-content-evenly align-items-center card-review-description">
+    <% @pet.reviews.each do |review| %>
+      <div class="stars-display pt-2 pb-2">
+        <% review.rating.times do |index| %>
+          <i class="far fa-star custom-stars"></i>
+        <% end %>
       </div>
+      <div class="d-flex justify-content-around">
+        <p class="mr-5"><%= review.content %></p>
+        <p>Posted by <%= review.booking.user.first_name %></p>
+      </div>
+      <% end %>
   </div>
 </div>
+
+<% if policy(@pet).destroy? %>
+  <%= link_to "Unlist pet", pet_path(@pet), method: "delete", data: {confirm: "Are you sure ?"} %>
+<% end %>
