add bookable column to pet + unlist pet

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,7 +7,7 @@
   <div class="card mb-3" style="max-width: 540px;">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <%#= cl_image_tag booking.pet.photos.first.key, height: 300, width: 400, crop: :fill %>
+        <%= cl_image_tag booking.pet.photos.first.key, height: 300, width: 400, crop: :fill %>
       </div>
       <div class="col-md-8">
         <div class="card-body">
