Added the road as own file

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,8 +15,5 @@
         <%= submit_tag "Search", class: "btn btn-dark" %>
     <% end %>
   </div>
-  <div id = "road">
-    <i class="fas fa-cat fa-flip-horizontal icon-cat-home"></i>
-    <i class="fas fa-dog icon-dog-home"></i>
-  </div>
+  <%= render 'shared/road' %>
 </div>
