fixed the carousel to fit the pictures

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,4 +23,5 @@
 @import "components/images";
 @import "components/button";
 @import "components/icons";
-@import "components/animation"
+@import "components/animation";
+@import "components/carousel"
