--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -32,11 +32,11 @@
 
 
 
-  <div class = "description&background d-flex justify-content-around mt-5">
+  <div class = "description-background d-flex justify-content-around mt-5">
     <div class= "pet-description">
       <div class= "description-header d-flex justify-content-between">
         <h1><%= @pet.name %></h1>
-        <div class="display-price&tags">
+        <div class="display-price-tags">
           <%= @pet.price%>€
           <div class= "display-tags d-flex justify-content-between">
             <% @pet.tag_list.each do |tag| %>
