--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -80,6 +80,8 @@
       <div class="mt-5 ml-3"> <%= render 'shared/flatpickr_form' %></div>
     </div>
   </div>
+  <h2>Description</h2>
+  <h2>Reviews</h2>
   <div class="mt-3 d-flex justify-content-evenly align-items-center card-review-description">
     <% @pet.reviews.each do |review| %>
       <div class="stars-display pt-2 pb-2 mr-5 ml-2">
