--- a/app/assets/stylesheets/components/_banners.scss
+++ b/app/assets/stylesheets/components/_banners.scss
@@ -9,10 +9,23 @@
   background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://res.cloudinary.com/ambroise/image/upload/v1582191823/aagwg7hopvtgs7ivwovc.jpg)
 }
 
+.text-typed{
+  font-weight: bold;
+  font-size:26px;
+  color:white;
+}
+
+.content {
+  margin:0px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-direction:column;
+}
+
 .search-engine{
+  width:750px;
   padding:20px;
-  position:absolute;
-  left:160px;
   border-radius: 5px;
   overflow: hidden;
   background: white;
@@ -56,7 +69,6 @@
 
 .horizontal{
   display:flex;
-  width:1000px;
   align-items:center;
   position:relative
 }
