--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="bg-img-home">
   <%= render 'shared/navbar' %>
-  <div class="content">
+  <div class="content-home-center">
     <h2 class ="text-typed">
       <span id="banner-typed-text"></span>
     </h2>
