--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -6,13 +6,13 @@
   <div class="card mb-3" style="max-width: 540px;">
     <div class="row no-gutters">
       <div class="col-md-4 p-2">
-       <% if booking.pet.photos.attached? %>
-          <%= link_to pet_path(booking.pet) do %>
+        <%= link_to pet_path(booking.pet) do %>
+          <% if booking.pet.photos.attached? %>
             <%=cl_image_tag booking.pet.photos.first.key, crop: :fill, width:"180", height:"180" %>
-            <% end %>
-       <% else %>
-         <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg", width="180", height="180">
-       <% end %>
+         <% else %>
+           <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg", width="180", height="180">
+         <% end %>
+        <% end %>
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -28,15 +28,20 @@
             The pet is coming soon to you
             <% end %>
           </small></p>
+
           <% if Integer(Date.today - booking.end_date) < 0%>
-          <class class="d-flex align-items-center justify-content-between">
-            <button class="btn btn-secondary">You can't review yet !</button>
-            <p class="cancel align-self-center m-0 bd-highligh">
-              <% if policy(booking).destroy? %>
-                <%= link_to "Cancel Booking", booking_path(booking), method: "delete", data: {confirm: "Are you sure ?"} %>
-              <% end %>
-          </p>
-          </class>
+
+            <div class="d-flex align-items-center justify-content-between">
+              <button class="btn btn-secondary">You can't review yet !</button>
+              <% if Integer(Date.today - booking.start_date) < 0 %>
+              <p class="cancel align-self-center m-0 bd-highligh">
+                <% if policy(booking).destroy? %>
+                  <%= link_to "Cancel Booking", booking_path(booking), method: "delete", data: {confirm: "Are you sure ?"} %>
+                <% end %>
+              </p>
+          <% end %>
+          </div>
+
           <% elsif booking.review.nil? %>
             <button class="add-review btn btn-secondary">Add a review</button>
           <% else %>
