--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,72 +1,75 @@
 <div class="container">
+  <h1>My bookings</h1>
 
-<h1>My bookings</h1>
-<% @bookings.each do |booking| %>
-  <div class="booking">
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row no-gutters">
-      <div class="col-md-4 p-2">
-        <%= link_to pet_path(booking.pet) do %>
-          <% if booking.pet.photos.attached? %>
-            <%=cl_image_tag booking.pet.photos.first.key, crop: :fill, width:"180", height:"180" %>
-         <% else %>
-           <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg", width="180", height="180">
-         <% end %>
-        <% end %>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title"><%= booking.pet.name %> - <%= booking.pet.race.name %></h5>
-          <p class="card-text">From <%= booking.start_date.strftime("%d/%m") %> to <%= booking.end_date.strftime("%d/%m") %></p>
-          <p class="card-text"></p>
-          <p class="card-text"><small class="text-muted">
-            <% if Integer(Date.today - booking.end_date) > 0 %>
-            <%= Integer(Date.today - booking.end_date) %> days ago
-            <% elsif Integer(Date.today - booking.start_date) >= 0 %>
-            Still renting the pet
-            <% else %>
-            The pet is coming soon to you
-            <% end %>
-          </small></p>
-
-          <% if Integer(Date.today - booking.end_date) < 0%>
-
-            <div class="d-flex align-items-center justify-content-between">
-              <button class="btn btn-secondary">You can't review yet !</button>
-              <% if Integer(Date.today - booking.start_date) < 0 %>
-              <p class="cancel align-self-center m-0 bd-highligh">
-                <% if policy(booking).destroy? %>
-                  <%= link_to "Cancel Booking", booking_path(booking), method: "delete", data: {confirm: "Are you sure ?"} %>
+  <div class="bookings-grid">
+    <% @bookings.each do |booking| %>
+      <div>
+        <div class="card p-4">
+          <div class="d-flex mb-3">
+            <div>
+              <%= link_to pet_path(booking.pet) do %>
+                <% if booking.pet.photos.attached? %>
+                  <%= cl_image_tag booking.pet.photos.first.key, crop: :fill, width:"180", height:"180" %>
+                <% else %>
+                  <img src="https://jardinage.lemonde.fr/images/dossiers/2019-11/berger-autralien-merle-094920.jpg", width="180", height="180">
                 <% end %>
+              <% end %>
+            </div>
+            <div class="ml-3">
+              <h5 class="card-title"><%= booking.pet.name %> - <%= booking.pet.race.name %></h5>
+              <p class="card-text">From <%= booking.start_date.strftime("%d/%m") %> to <%= booking.end_date.strftime("%d/%m") %></p>
+              <p class="card-text">
+                <small class="text-muted">
+                  <% if Integer(Date.today - booking.end_date) > 0 %>
+                    <%= Integer(Date.today - booking.end_date) %> days ago
+                  <% elsif Integer(Date.today - booking.start_date) >= 0 %>
+                    Still renting the pet
+                  <% else %>
+                    The pet is coming soon to you
+                  <% end %>
+                </small>
               </p>
-          <% end %>
+            </div>
           </div>
-
+          <% if Integer(Date.today - booking.end_date) < 0%>
+            <div class="d-flex align-items-center justify-content-between">
+              <button class="btn btn-secondary">
+                You can't review yet !
+              </button>
+              <% if Integer(Date.today - booking.start_date) < 0 %>
+                <p class="cancel align-self-center m-0 bd-highligh">
+                  <% if policy(booking).destroy? %>
+                    <%= link_to "Cancel Booking", booking_path(booking), method: "delete", data: {confirm: "Are you sure ?"} %>
+                  <% end %>
+                </p>
+              <% end %>
+            </div>
           <% elsif booking.review.nil? %>
-            <button class="add-review btn btn-secondary">Add a review</button>
+            <button class="add-review btn btn-secondary">
+              Add a review
+            </button>
           <% else %>
-            <button class="see-review btn btn-outline-secondary"> <%= link_to "See my review", pet_path(booking.pet) %> </button>
+            <button class="see-review btn btn-outline-secondary">
+              <%= link_to "See my review", pet_path(booking.pet) %>
+            </button>
+          <% end %>
+        </div>
+        <div class="d-none mt-3 align-items-center">
+          <%= simple_form_for([booking, @review]) do |t| %>
+            <%= t.input :content, hint: 'Write your review !' %>
+            <%= t.input :rating, as: :hidden  %>
+            <div class="d-flex review my-3 justify-content-between">
+              <div>
+                <i id=1  class="review-rating fas fa-star"></i>
+                <% 4.times do |index| %>
+                  <i id="<%= index + 2 %>"  class="review-rating far fa-star"></i>
+                <% end %>
+              </div>
+              <%= t.submit 'Done!', class: "btn btn-secondary" %>
+            </div>
           <% end %>
         </div>
       </div>
-    </div>
-  </div>
-
-
-  <div class="d-none my-3">
-    <%= simple_form_for([booking, @review]) do |t| %>
-      <%= t.input :content %>
-      <%= t.input :rating, as: :hidden  %>
-      <div class="review my-3">
-        <% 5.times do |index| %>
-          <i id="<%= index + 1 %>"  class="review-rating far fa-star"></i>
-        <% end %>
-      </div>
-      <%= t.submit 'Done!', class: "btn btn-secondary" %>
     <% end %>
   </div>
-<% end %>
-</div>
-</div>
-</div>
 </div>
