--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,5 +23,5 @@
 @import "components/images";
 @import "components/button";
 @import "components/icons";
-@import "components/animation";
-@import "components/carousel"
+@import "components/carousel";
+@import "components/footer"
