add full stars and review msg

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -96,8 +96,9 @@ h3 {
   border-radius: 3px
  }
 
-.custom-stars {
+.fa-star {
     font-size: 30px;
+    color: #f9c232;
 }
 
 .card-review-description {
