--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -80,12 +80,15 @@
     </div>
   </div>
   <hr class = "m-5">
-  <h4 class= "ml-5">Reviews</h4>
+  <h4>Reviews</h4>
+  <% if @pet.reviews.empty? %>
+    <p><%= "Their is no review yet" %></p>
+    <% else %>
   <div class="mt-3 p-3 card-review-description">
     <% @pet.reviews.each do |review| %>
       <div class="stars-display">
         <% review.rating.times do |index| %>
-          <i class="far fa-star custom-stars"></i>
+          <i class="fas fa-star"></i>
         <% end %>
       </div>
       <div class ="mt-4">
@@ -94,6 +97,7 @@
       </div>
       <% end %>
   </div>
+  <% end %>
 
   <button id="sweet-alert-demo" class="btn btn-danger">Unlist <%= @pet.name %> from booking</button>
   <%= link_to "", pet_path(@pet), method: :delete, id: "delete-link" %>
