Corrected bugs and added foooter to home page

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,8 +1,7 @@
 .footer {
   height:           0px;
   width:            100vw;
-  position:         relative;
+  position:         absolute;
   bottom:           0px;
-  // background-color: white;
   border-bottom:    7px dashed white;
 }
