--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -1,15 +1,15 @@
 .icon-cat-home {
   color:     white;
   font-size: 50px;
-  position:  relative;
-  left:      80px;
+  position:  absolute;
+  left:      200px;
   bottom:    10px;
 }
 
 .icon-dog-home {
   color:     white;
   font-size: 50px;
-  position:  relative;
-  left:      20px;
+  position:  absolute;
+  left:      130px;
   bottom:    10px;
 }
