--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -33,13 +33,14 @@
     <div class= "pet-description mr-3">
       <div class= "description-header d-flex justify-content-between align-items-center pt-3">
         <div>
-          <% if policy(@pet).destroy? %>
-            <%= link_to "Unlist pet", pet_path(@pet), method: "delete", data: {confirm: "Are you sure ?"}, class: "btn btn-danger"%>
-          <% end %>
           <h1><%= @pet.name %></h1>
           <div class="d-flex">
           <% @pet.tag_list.each do |tag| %>
             <h6 class="tag"><%= tag %></h6>
+          <% end %>
+          <% if policy(@pet).destroy? %>
+            <button id="sweet-alert-demo" class="btn btn-danger">Unlist Pet</button>
+            <%= link_to "", pet_path(@pet), method: :delete, id: "delete-link" %>
           <% end %>
           </div>
         </div>
@@ -95,6 +96,4 @@
       <% end %>
   </div>
 
-  <button id="sweet-alert-demo" class="btn btn-danger">Unlist <%= @pet.name %> from booking</button>
-  <%= link_to "", pet_path(@pet), method: :delete, id: "delete-link" %>
 </div>
