--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,2 +1,4 @@
 <div class="footer">
+  <i class="fas fa-dog icon-dog-home"></i>
+  <i class="fas fa-cat fa-flip-horizontal icon-cat-home"></i>
 </div>
