footer and corrected bugs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,4 +24,6 @@
 @import "components/button";
 @import "components/icons";
 @import "components/carousel";
-@import "components/footer"
+@import "components/footer";
+@import "components/test-test"
+
