--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,6 @@
 .footer {
-  height:           0px;
   width:            100vw;
-  position:         absolute;
+  position:         fixed;
   bottom:           0px;
   border-bottom:    7px dashed white;
 }
