--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -1,7 +1,7 @@
 .icon-cat-home {
   color:     white;
   font-size: 50px;
-  position:  absolute;
+  position:  fixed;
   left:      200px;
   bottom:    10px;
 }
@@ -9,7 +9,7 @@
 .icon-dog-home {
   color:     white;
   font-size: 50px;
-  position:  absolute;
+  position:  fixed;
   left:      130px;
   bottom:    10px;
 }
