--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -5,7 +5,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height:200vh;
+  height:50vw;
   background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://res.cloudinary.com/ambroise/image/upload/v1582192839/qwgfupe5nszuj8rziifj.jpg)
 }
 
@@ -16,7 +16,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height:250vh;
+  height:100vw;
   background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://res.cloudinary.com/ambroise/image/upload/v1582196363/azerty.jpg)
 }
 
