--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,9 @@
     <%= render 'shared/flashes' %>
     <div class="container-global">
       <%= yield %>
-
-      <!--<%= render 'shared/footer' %>-->
     </div>
+      <%= render 'shared/test' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
-
   </body>
 </html>
