--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -12,6 +12,7 @@
         <%  pet.tag_list.each do |tag| %>
           <h3 class="tag"><%= tag %></h3>
         <% end %>
+        <h3 class="tag <%= pet.bookable ? "bookable" : "not_bookable" %>"><%= pet.bookable ? "bookable" : "Not bookable" %></h3>
       </div>
     </div>
     <div class="card-photos">
